Card Maker Version History
--------------------------
1.1.0.0
- Additional override for background shapes allowing for custom opacity
- Added ability to select alpha in the color selection dialog.
- Border render on exports is now controlled per layout instead of at the application level.
- Updated Color dialog to allow typing/pasting of hex values.
- Added ability to export with only crosses in the corners with layouts
- Changed border functionality on export to apply if both border is enabled on the layout and border export is enabled in the general settings
- Added support for the non-deprecated Google Sheets API
- Added support for AutoSave (Disabled by default, can toggle with Ctrl+T)
- Support for loading excel files! (TheMikaus)
- Added basic implementation of FormattedText auto-scale (only applies to main font size)

1.0.1.0
- Added Crop Export Definition (for PDF to start with) allowing for cropped outputs.
- Added an optional x/y display to the Canvas form.

1.0.0.2
- Updated handling for outlines and opacity.
- Fixed a old bug related to the properties field and the shape element definition
- Massive overhaul to the Layout resize functionality... now with undo! (accessible in the project > layout context menu and via Resize button) (kek444/nhmkdev)
- Zoom level is now persisted per layout and saved in the project file (kek444)
- Always show selected element (kek444)
- Updated CSV quote handling "" support(kek444)
- Options for JavaScript escaping (salmelo)
- Fixed open functions (recents and open) to prompt if the current project has not been saved
- Added #switchkey functionality to switch statements so the key can be referenced
- The opacity of inline elements can be specified with an alpha value on the element color (assuming I am happy with the outcome).
- Updated project wide export image/pdf to skip layouts with references but no actual entries