@@ -71,7 +71,7 @@ namespace CardMaker.Events.Managers
         #endregion
 
         /// <summary>
-        /// Checks if the google credentials are set.
+        /// Checks if the google credentials are set. This will result in a prompt for the user (via event).
         /// </summary>
         /// <returns>true if the credentials are set, false otherwise</returns>
         public static bool CheckGoogleCredentials(Form parentForm)
@@ -87,7 +87,7 @@ namespace CardMaker.Events.Managers
                     return false;
                 }
                 Instance.FireGoogleAuthUpdateRequestedEvent();
-                return false;
+                return !string.IsNullOrEmpty(CardMakerInstance.GoogleAccessToken);
             }
             return true;
         }
